Update biblio chap2 et chap3

--- a/biblio.bib
+++ b/biblio.bib
@@ -18,7 +18,7 @@
 
 
 @article{Barabash2010ie,
-  title = {Precise half-life values for two-neutrino double-$\ensuremath{\beta}$ decay},
+  title = {Precise half-life values for two-neutrino double-$\beta$ decay},
   author = {Barabash, A. S.},
   journal = {Phys. Rev. C},
   volume = {81},
@@ -112,6 +112,359 @@
 }
 
 
+@article{ElegantV-1,
+title = "Double beta decays and ELEGANT V and VI at Oto Cosmo Observatory",
+journal = "Nuclear Physics A",
+volume = "629",
+number = "1",
+pages = "527 - 530",
+year = "1998",
+note = "",
+issn = "0375-9474",
+doi = "http://dx.doi.org/10.1016/S0375-9474(97)00732-X",
+url = "http://www.sciencedirect.com/science/article/pii/S037594749700732X",
+author = "N. Kudomi and others",
+
+}
+
+
+@article{NEMO2:Se82,
+      author         = "Arnold, R. and others",
+      title          = "{Double beta decay of Se-82}",
+      collaboration  = "NEMO",
+      journal        = "Nucl. Phys.",
+      volume         = "A636",
+      year           = "1998",
+      pages          = "209-223",
+      doi            = "10.1016/S0375-9474(98)00208-5",
+      SLACcitation   = "%%CITATION = NUPHA,A636,209;%%"
+}
+
+@article{NEMO2:Cd116,
+      author         = "Arnold, R. and others",
+      title          = "{Double-beta decay of Cd-116}",
+      collaboration  = "NEMO",
+      journal        = "Z. Phys.",
+      volume         = "C72",
+      year           = "1996",
+      pages          = "239-247",
+      doi            = "10.1007/s002880050241",
+      SLACcitation   = "%%CITATION = ZEPYA,C72,239;%%"
+}
+
+@article{NEMO2:Zr96,
+      author         = "Arnold, R. and others",
+      title          = "{Double beta decay of Zr-96}",
+      journal        = "Nucl. Phys.",
+      volume         = "A658",
+      year           = "1999",
+      pages          = "299-312",
+      doi            = "10.1016/S0375-9474(99)00374-7",
+      SLACcitation   = "%%CITATION = NUPHA,A658,299;%%"
+}
+
+@article{NEMO2:Mo100,
+  title = {Two-neutrino double-\ensuremath{\beta} decay measurement of $^{100}\mathrm{Mo}$},
+  author = "Dassi\'e, D. and others",
+  journal = {Phys. Rev. D},
+  volume = {51},
+  issue = {5},
+  pages = {2090--2100},
+  numpages = {0},
+  year = {1995},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.51.2090},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.51.2090}
+}
+
+
+@article{BiPoDetector,
+      author         = "Barabash, A. S. and others",
+      title          = "{The BiPo-3 detector for the measurement of ultra low
+                        natural radioactivities of thin materials}",
+      collaboration  = "SuperNEMO",
+      year           = "2017",
+      eprint         = "1702.07176",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1702.07176;%%"
+}
+
+@article{NEMO3:Mo100,
+      author         = "Arnold, R. and others",
+      title          = "{Results of the search for neutrinoless double-$\beta$ decay
+                        in $^{100}$Mo with the NEMO-3 experiment}",
+      collaboration  = "NEMO-3",
+      journal        = "Phys. Rev.",
+      volume         = "D92",
+      year           = "2015",
+      number         = "7",
+      pages          = "072011",
+      doi            = "10.1103/PhysRevD.92.072011",
+      eprint         = "1506.05825",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1506.05825;%%"
+}
+
+@article{NEMO3:Nd150,
+      author         = "Arnold, R. and others",
+      title          = "{Measurement of the 2$\nu\beta\beta$ decay half-life of
+                        $^{150}$Nd and a search for 0$\nu\beta\beta$ decay
+                        processes with the full exposure from the NEMO-3
+                        detector}",
+      collaboration  = "NEMO-3",
+      journal        = "Phys. Rev.",
+      volume         = "D94",
+      year           = "2016",
+      number         = "7",
+      pages          = "072003",
+      doi            = "10.1103/PhysRevD.94.072003",
+      eprint         = "1606.08494",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1606.08494;%%"
+}
+
+@article{NEMO3:Ca48,
+      author         = "Arnold, R. and others",
+      title          = "{Measurement of the double-beta decay half-life and
+                        search for the neutrinoless double-beta decay of $^{48}$Ca
+                        with the NEMO-3 detector}",
+      collaboration  = "NEMO-3",
+      journal        = "Phys. Rev.",
+      volume         = "D93",
+      year           = "2016",
+      number         = "11",
+      pages          = "112008",
+      doi            = "10.1103/PhysRevD.93.112008",
+      eprint         = "1604.01710",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1604.01710;%%"
+}
+
+
+
+@article{NEMO3:Te130,
+      author         = "Arnold, Roger and others",
+      title          = "{Measurement of the Double Beta Decay Half-life of
+                        $^{130}Te$ with the NEMO-3 Detector}",
+      collaboration  = "NEMO-3",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "107",
+      year           = "2011",
+      pages          = "062504",
+      doi            = "10.1103/PhysRevLett.107.062504",
+      eprint         = "1104.3716",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1104.3716;%%"
+}
+
+@article{NEMO3:Zr96,
+      author         = "Argyriades, J. and others",
+      title          = "{Measurement of the two neutrino double beta decay
+                        half-life of Zr-96 with the NEMO-3 detector}",
+      collaboration  = "NEMO-3",
+      journal        = "Nucl. Phys.",
+      volume         = "A847",
+      year           = "2010",
+      pages          = "168-179",
+      doi            = "10.1016/j.nuclphysa.2010.07.009",
+      eprint         = "0906.2694",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:0906.2694;%%"
+}
+
+@article{NEMO3:Se82,
+      author         = "Arnold, R. and others",
+      title          = "{First results of the search of neutrinoless double beta
+                        decay with the NEMO 3 detector}",
+      collaboration  = "NEMO",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "95",
+      year           = "2005",
+      pages          = "182302",
+      doi            = "10.1103/PhysRevLett.95.182302",
+      eprint         = "hep-ex/0507083",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0507083;%%"
+}
+
+@article{CosmicFluxLSM,
+  title = {Experimental study of muon bundles observed in the Fr\'ejus detector},
+  author = {Berger, Ch. and others},
+  collaboration = {Fr\'ejus Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {40},
+  issue = {7},
+  pages = {2163--2171},
+  numpages = {0},
+  year = {1989},
+  month = {Oct},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.40.2163},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.40.2163}
+}
+
+
+@article{MuonFluxUndergroundLab,
+      author         = "Mei, Dongming and Hime, A.",
+      title          = "{Muon-induced background study for underground
+                        laboratories}",
+      journal        = "Phys. Rev.",
+      volume         = "D73",
+      year           = "2006",
+      pages          = "053004",
+      doi            = "10.1103/PhysRevD.73.053004",
+      eprint         = "astro-ph/0512125",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      reportNumber   = "LA-UP-05-3704",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0512125;%%"
+}
+
+
+@article{NEMO1,
+      author         = "Dassie, D. and others",
+      title          = "{Double beta decay prototype detector with multiwire
+                        drift tubes in the Geiger mode}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A309",
+      year           = "1991",
+      pages          = "465-475",
+      doi            = "10.1016/0168-9002(91)90249-P",
+      reportNumber   = "LAL-91-29",
+      SLACcitation   = "%%CITATION = NUIMA,A309,465;%%"
+}
+
+
+@article{NEMO2,
+      author         = "R. Arnold et al.",
+      title          = "{Performances of NEMO-2, a Prototype Tracking Detector for Double Beta Decay Measurements}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A354",
+      year           = "1995"
+}
+
+@article{DecayCo60,
+      author         = "J. Tuli",
+      title          = "{Nuclear Data Sheets for A = 60}",
+      journal        = "Nuclear Data Sheets",
+      volume         = "A309",
+      year           = "2003",
+      pages          = "347-481",
+}
+
+@article{NEMO3-BKG,
+      author         = "Argyriades, J. and others",
+      title          = "{Measurement of the background in the NEMO 3 double beta
+                        decay experiment}",
+      collaboration  = "NEMO",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A606",
+      year           = "2009",
+      pages          = "449-465",
+      doi            = "10.1016/j.nima.2009.04.011",
+      eprint         = "0903.2277",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:0903.2277;%%"
+}
+
+
+@article{TrackerExperimentDBD,
+	risfield_0_da = {2012/08/01},
+	risfield_1_t2 = {Neutrino 2010},
+	author = {{Saakyan R.}},
+	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2012.09.022},
+	issn = {0920-5632},
+	journal = {Nuclear Physics B - Proceedings Supplements},
+	keywords = {neutrino mass; double beta decay; topological signature},
+	pages = {135--140},
+	title = {{Tracking-based Experiments in Double Beta Decay}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0920563212002393},
+	volume = {229},
+	year = {2012}
+}
+
+
+@article{ProbingNewPhysicsSN,
+	risfield_0_da = {2010//},
+	author = {{Arnold R.} and al},
+	doi = {http://dx.doi.org/10.1140/epjc/s10052-010-1481-5 10.1140/epjc/s10052-010-1481-5},
+	issn = {1434-6052},
+	journal = {The European Physical Journal C},
+	number = {4},
+	pages = {927--943},
+	title = {{Probing new physics models of neutrinoless double beta decay with SuperNEMO}},
+	volume = {70},
+	year = {2010}
+}
+
+
+@inproceedings{trackerSN,
+      author         = "Cascella, M.",
+      title          = "{The SuperNEMO Tracking Detector}",
+      booktitle      = "{Proceedings, Topical Research Meeting on Prospects in
+                        Neutrino Physics (NuPhys2014): London, UK, December 15-17,
+                        2014}",
+      url            = "https://inspirehep.net/record/1365554/files/arXiv:1504.08304.pdf",
+      year           = "2015",
+      eprint         = "1504.08304",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      SLACcitation   = "%%CITATION = ARXIV:1504.08304;%%"
+}
+
+@article{SNCalorimeter,
+	title = {{To be published}}
+}
+
+
+@article{WeizsckerFormula,
+      author         = "Weizsacker, C. F. V.",
+      title          = "{Zur Theorie der Kernmassen}",
+      journal        = "Z. Phys.",
+      volume         = "96",
+      year           = "1935",
+      pages          = "431-458",
+      doi            = "10.1007/BF01337700",
+      SLACcitation   = "%%CITATION = ZEPYA,96,431;%%"
+}
+
+@article{GoeppertMayerDoubleBetaDecay,
+  title = {Double Beta-Disintegration},
+  author = {Goeppert-Mayer, M.},
+  journal = {Phys. Rev.},
+  volume = {48},
+  issue = {6},
+  pages = {512--516},
+  numpages = {0},
+  year = {1935},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRev.48.512},
+  url = {https://link.aps.org/doi/10.1103/PhysRev.48.512}
+}
+
+@article{RacahNeutrinolessDBDMajorana,
+      author         = "Racah, G.",
+      title          = "{On the symmetry of particle and antiparticle}",
+      journal        = "Nuovo Cim.",
+      volume         = "14",
+      year           = "1937",
+      pages          = "322-328",
+      doi            = "10.1007/BF02961321",
+      SLACcitation   = "%%CITATION = NUCIA,14,322;%%"
+}
+
+
+
 @article{TheoryOfNeutrinolessDBD,
       author         = "Vergados, J. D. and Ejiri, H. and Simkovic, F.",
       title          = "{Theory of Neutrinoless Double Beta Decay}",
@@ -126,19 +479,414 @@
       SLACcitation   = "%%CITATION = ARXIV:1205.0649;%%"
 }
 
-
-@article{ElegantV-1,
-title = "Double beta decays and ELEGANT V and VI at Oto Cosmo Observatory",
-journal = "Nuclear Physics A",
-volume = "629",
-number = "1",
-pages = "527 - 530",
-year = "1998",
-note = "",
-issn = "0375-9474",
-doi = "http://dx.doi.org/10.1016/S0375-9474(97)00732-X",
-url = "http://www.sciencedirect.com/science/article/pii/S037594749700732X",
-author = "N. Kudomi and H. Ejiri and K. Fushimi and K. Hayashi and R. Hazama and T. Kishimoto and M. Komori and K. Kume and G. Kunitomi and T. Matsuoka and H. Miyawaki and K. Nagata and H. Ohsumi and K. Okada and T. Shima and S. Shiomi and K. Takahisa and J. Tanaka and K. Tasaka and T. Watanabe",
-
+@article{SUSYandDBD,
+      author         = "Hirsch, M. and Klapdor-Kleingrothaus, H. V. and
+                        Kovalenko, S. G.",
+      title          = "{Supersymmetry and neutrinoless double beta decay}",
+      journal        = "Phys. Rev.",
+      volume         = "D53",
+      year           = "1996",
+      pages          = "1329-1348",
+      doi            = "10.1103/PhysRevD.53.1329",
+      eprint         = "hep-ph/9502385",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MPI-H-V6-1995, MPI-H-V-6-1995",
+      SLACcitation   = "%%CITATION = HEP-PH/9502385;%%"
 }
+
+@article{SchechterValle,
+  title = {Neutrino masses in SU(2) \ensuremath{\bigotimes} U(1) theories},
+  author = {Schechter, J. and Valle, J. W. F.},
+  journal = {Phys. Rev. D},
+  volume = {22},
+  issue = {9},
+  pages = {2227--2235},
+  numpages = {0},
+  year = {1980},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.22.2227},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.22.2227}
+}
+
+@article{DBDmeff,
+      author         = "Rodejohann, Werner",
+      title          = "{Neutrinoless double beta decay and neutrino physics}",
+      journal        = "J. Phys.",
+      volume         = "G39",
+      year           = "2012",
+      pages          = "124008",
+      doi            = "10.1088/0954-3899/39/12/124008",
+      eprint         = "1206.2560",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1206.2560;%%"
+}
+
+@article{DBDRightHandedCurrent,
+author = {Doi, Masaru and Kotani, Tsuneyuki and Nishiura, Hiroyuki and Takasugi, Eiichi},
+title = {Double Beta Decay},
+journal = {Progress of Theoretical Physics},
+volume = {69},
+number = {2},
+pages = {602},
+year = {1983},
+doi = {10.1143/PTP.69.602},
+URL = { + http://dx.doi.org/10.1143/PTP.69.602},
+eprint = {/oup/backfile/content_public/journal/ptp/69/2/10.1143/ptp.69.602/2/69-2-602.pdf}
+}
+
+@article{MajoronEmission1,
+  title = {Spontaneously Broken Lepton Number and Cosmological Constraints on the Neutrino Mass Spectrum},
+  author = {Chikashige, Y. and Mohapatra, R. N. and Peccei, R. D.},
+  journal = {Phys. Rev. Lett.},
+  volume = {45},
+  issue = {24},
+  pages = {1926--1929},
+  numpages = {0},
+  year = {1980},
+  month = {Dec},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.45.1926},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.45.1926}
+}
+
+
+@article{MajoronEmission2,
+	risfield_0_da = {1982/12/16},
+	author = {{Aulakh C.S.} and {Mohapatra R.N.}},
+	doi = {http://dx.doi.org/10.1016/0370-2693(82)90262-3},
+	issn = {0370-2693},
+	journal = {Physics Letters B},
+	number = {1},
+	pages = {136--140},
+	title = {{The neutrino as the supersymmetric partner of the majoron}},
+	url = {http://www.sciencedirect.com/science/article/pii/0370269382902623},
+	volume = {119},
+	year = {1982}
+}
+
+
+@article{MajoronEmission3,
+	risfield_0_da = {1981/03/05},
+	author = {{Gelmini G.B.} and {Roncadelli M.}},
+	doi = {http://dx.doi.org/10.1016/0370-2693(81)90559-1},
+	issn = {0370-2693},
+	journal = {Physics Letters B},
+	number = {5},
+	pages = {411--415},
+	title = {{Left-handed neutrino mass scale and spontaneously broken lepton number}},
+	url = {http://www.sciencedirect.com/science/article/pii/0370269381905591},
+	volume = {99},
+	year = {1981}
+}
+
+@article{MajoronDecayMode,
+	risfield_0_da = {1995/08/28},
+	author = {{Bamert P.} and {Burgess C.P.} and {Mohapatra R.N.}},
+	doi = {http://dx.doi.org/10.1016/0550-3213(95)00273-U},
+	issn = {0550-3213},
+	journal = {Nuclear Physics B},
+	number = {1},
+	pages = {25--48},
+	title = {{Multi-majoron modes for neutrinoless double-beta decay}},
+	url = {http://www.sciencedirect.com/science/article/pii/055032139500273U},
+	volume = {449},
+	year = {1995}
+}
+
+@article{HeidelbergMoscow1,
+      author         = "Klapdor-Kleingrothaus, H. V. and others",
+      title          = "{Latest results from the Heidelberg-Moscow double beta
+                        decay experiment}",
+      booktitle      = "{Proceedings, 3rd International Heidelberg Conference on
+                        Dark matter in astro- and particle physics (DARK 2000):
+                        Heidelberg, Germany, July 10-14, 2000}",
+      journal        = "Eur. Phys. J.",
+      volume         = "A12",
+      year           = "2001",
+      pages          = "147-154",
+      doi            = "10.1007/s100500170022",
+      eprint         = "hep-ph/0103062",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0103062;%%"
+}
+
+@article{HeidelbergMoscow2,
+	author = {{Klapdor-Kleingrothaus H.V} and {Krivosheina I.V} and {Dietz A} and {Chkvorets O}},
+	doi = {https://doi.org/10.1016/j.physletb.2004.02.025},
+	issn = {0370-2693},
+	journal = {Physics Letters B},
+	month = apr,
+	number = {3--4},
+	pages = {198--212},
+	title = {{Search for neutrinoless double beta decay with enriched 76Ge in Gran Sasso 1990--2003}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0370269304003235},
+	volume = {586},
+	year = {2004}
+}
+
+@article{HeidelbergMoscow3,
+      author         = "Aalseth, C. E. and others",
+      title          = "{Comment on `Evidence for neutrinoless double beta
+                        decay'}",
+      journal        = "Mod. Phys. Lett.",
+      volume         = "A17",
+      year           = "2002",
+      pages          = "1475-1478",
+      doi            = "10.1142/S0217732302007715",
+      eprint         = "hep-ex/0202018",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = HEP-EX/0202018;%%"
+}
+
+
+@article{IGEX,
+	risfield_0_da = {2000//},
+	author = Aalseth C. E. and others",
+	doi = {http://dx.doi.org/10.1134/1.855774 10.1134/1.855774},
+	issn = {1562-692X},
+	journal = {Physics of Atomic Nuclei},
+	number = {7},
+	pages = {1225--1228},
+	title = {{Recent results of the IGEX 76Ge double-beta decay experiment}},
+	volume = {63},
+	year = {2000}
+}
+
+@article{GERDA,
+      author         = "Agostini, M. and others",
+      title          = "Results on Neutrinoless Double-$\beta$ Decay of
+                        $^{76}$Ge from Phase I of the GERDA Experiment",
+      collaboration  = "GERDA",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "111",
+      year           = "2013",
+      number         = "12",
+      pages          = "122503",
+      doi            = "10.1103/PhysRevLett.111.122503",
+      eprint         = "1307.4720",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1307.4720;%%"
+}
+
+
+@article{GERDAprospective,
+	risfield_0_da = {2013/04/01},
+	risfield_1_t2 = {Proceedings of the Neutrino Oscillation Workshop},
+	author = {{Kn\"{o}pfle K.T.}},
+	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2013.04.050},
+	issn = {0920-5632},
+	journal = {Nuclear Physics B - Proceedings Supplements},
+	keywords = {neutrinoless double beta decay; Ge; enriched germanium detectors},
+	pages = {31--33},
+	title = {{GERDA -- Status and Perspectives}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0920563213001710},
+	volume = {237},
+	year = {2013}
+}
+
+
+@article{MAJORANA,
+      author         = "Abgrall, N. and others",
+      title          = "{The Majorana Demonstrator Neutrinoless Double-Beta Decay
+                        Experiment}",
+      collaboration  = "Majorana",
+      journal        = "Adv. High Energy Phys.",
+      volume         = "2014",
+      year           = "2014",
+      pages          = "365432",
+      doi            = "10.1155/2014/365432",
+      eprint         = "1308.1633",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "LA-UR-13-24815",
+      SLACcitation   = "%%CITATION = ARXIV:1308.1633;%%"
+}
+
+
+@article{MAJORANAandGERDA,
+	risfield_0_da = {2012/08/01},
+	risfield_1_t2 = {Neutrino 2010},
+	author = {{Barnab\'{e} Heider Marik}},
+	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2012.09.023},
+	issn = {0920-5632},
+	journal = {Nuclear Physics B - Proceedings Supplements},
+	keywords = {Semiconductor detector; Neutrinoless double beta decay; Radiation detector; CZT detector; Ge detector},
+	pages = {141--145},
+	title = {{Semiconductor-based experiments for neutrinoless double beta decay search}},
+	url = {http://www.sciencedirect.com/science/article/pii/S092056321200240X},
+	volume = {229},
+	year = {2012}
+}
+
+
+@article{COBRA,
+	risfield_0_da = {2011/12/01},
+	risfield_1_t2 = {The Proceedings of the 22nd International Conference on Neutrino Physics and Astrophysics},
+	author = {{Wilson Jeanne R.}},
+	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2011.09.022},
+	issn = {0920-5632},
+	journal = {Nuclear Physics B - Proceedings Supplements},
+	pages = {313--316},
+	title = {{Double Beta Decay Measurement with COBRA}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0920563211007122},
+	volume = {221},
+	year = {2011}
+}
+
+
+@article{ELEGANTVI,
+  title = {Neutrino-less double-$\ensuremath{\beta}$ decay of $^{48}\mathrm{Ca}$ studied by ${\mathrm{CaF}}_{2}$(Eu) scintillators},
+  author = Umehara, S. and others,
+  journal = {Phys. Rev. C},
+  volume = {78},
+  issue = {5},
+  pages = {058501},
+  numpages = {4},
+  year = {2008},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.78.058501},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.78.058501}
+}
+
+
+@article{CANDLESIII,
+  title = {Search for neutrino-less double beta decay with CANDLES},
+  author = A S. Umehara and others,
+  journal = {AIP Conference Proceedings},
+  volume = {1441},
+  pages = {448-450},
+  numpages = {1},
+  year = {2012},
+  url = {http://aip.scitation.org/doi/abs/10.1063/1.3700581}
+}
+
+@article{KamLAND-Zen,
+      author         = "Gando, A. and others",
+      title          = "{Limit on Neutrinoless $\beta\beta$ Decay of $^{136}$Xe
+                        from the First Phase of KamLAND-Zen and Comparison with
+                        the Positive Claim in $^{76}$Ge}",
+      collaboration  = "KamLAND-Zen",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "110",
+      year           = "2013",
+      number         = "6",
+      pages          = "062502",
+      doi            = "10.1103/PhysRevLett.110.062502",
+      eprint         = "1211.3863",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1211.3863;%%"
+}
+
+@article{KamLAND-Zen2,
+  title = {Limits on Majoron-emitting double-$\ensuremath{\beta}$ decays of ${}^{136}$Xe in the KamLAND-Zen experiment},
+  author = {Gando, and others},
+  collaboration = {KamLAND-Zen Collaboration},
+  journal = {Phys. Rev. C},
+  volume = {86},
+  issue = {2},
+  pages = {021601},
+  numpages = {4},
+  year = {2012},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevC.86.021601},
+  url = {https://link.aps.org/doi/10.1103/PhysRevC.86.021601}
+}
+
+
+@article{KamLAND-Zen3,
+	risfield_0_da = {2013/04/01},
+	risfield_1_t2 = {Proceedings of the Neutrino Oscillation Workshop},
+	author = {{Shirai Junpei}},
+	doi = {http://dx.doi.org/10.1016/j.nuclphysbps.2013.04.049},
+	issn = {0920-5632},
+	journal = {Nuclear Physics B - Proceedings Supplements},
+	keywords = {Majorana neutrinos; KamLAND-Zen; double-beta decay; Xe; liquid scintillator},
+	pages = {28--30},
+	title = {{KamLAND-Zen: Status and Future}},
+	url = {http://www.sciencedirect.com/science/article/pii/S0920563213001709},
+	volume = {237},
+	year = {2013}
+}
+
+@article{CUORICINO,
+      author         = "Andreotti, E. and others",
+      title          = "{130Te Neutrinoless Double-Beta Decay with CUORICINO}",
+      journal        = "Astropart. Phys.",
+      volume         = "34",
+      year           = "2011",
+      pages          = "822-831",
+      doi            = "10.1016/j.astropartphys.2011.02.002",
+      eprint         = "1012.3266",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-ex",
+      SLACcitation   = "%%CITATION = ARXIV:1012.3266;%%"
+}
+
+@article{CUORE,
+	author = {collaboration, {Luca Pattavina and the Cuore}},
+	issn = {1742-6596},
+	journal = {Journal of Physics: Conference Series},
+	number = {1},
+	pages = {012066},
+	title = {{Status of the CUORE experiment}},
+	url = {http://stacks.iop.org/1742-6596/447/i=1/a=012066},
+	volume = {447},
+	year = {2013}
+}
+
+@article{LUCIFER,
+	author = {collaboration, {Luca Pattavina and the Lucifer}},
+	issn = {1742-6596},
+	journal = {Journal of Physics: Conference Series},
+	number = {1},
+	pages = {012047},
+	title = {{LUCIFER: Neutrinoless Double Beta decay search with scintillating bolometers}},
+	url = {http://stacks.iop.org/1742-6596/335/i=1/a=012047},
+	volume = {335},
+	year = {2011}
+}
+
+@article{EXO-200,
+  title = {Search for Neutrinoless Double-Beta Decay in $^{136}\mathrm{Xe}$ with EXO-200},
+  collaboration = {EXO Collaboration},
+  journal = {Phys. Rev. Lett.},
+  volume = {109},
+  issue = {3},
+  pages = {032505},
+  numpages = {6},
+  year = {2012},
+  month = {Jul},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.109.032505},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.109.032505}
+}
+
+@article{NEXT,
+      author         = "Gomez-Cadenas, J. J. and others",
+      title          = "{Present status and future perspectives of the NEXT
+                        experiment}",
+      collaboration  = "NEXT",
+      journal        = "Adv. High Energy Phys.",
+      volume         = "2014",
+      year           = "2014",
+      pages          = "907067",
+      doi            = "10.1155/2014/907067",
+      eprint         = "1307.3914",
+      archivePrefix  = "arXiv",
+      primaryClass   = "physics.ins-det",
+      reportNumber   = "IFIC-13-46",
+      SLACcitation   = "%%CITATION = ARXIV:1307.3914;%%"
+}
+
+
+
 
