--- a/Chap3-NEMOdetectors.tex
+++ b/Chap3-NEMOdetectors.tex
@@ -12,18 +12,18 @@
 %\end{flushright} 
 
 
-\NI Initiated in the late 1980s, the principal goals of the NEMO project are the search for 0$\nu\beta\beta$ and the measurement of 2$\nu\beta\beta$ decays. The strategy adopted by the collaboration is the direct detection of the two emitted electrons, by separating the $\beta\beta$ emitters from the rest of the detector. This technique also allows to investigate any $\beta\beta$ isotopes with a powerful background discrimination. The Modane Underground Laboratory (LSM), which hosted all the NEMO prototypes and detectors, is described in Section~\ref{sec:LSM}. Section~\ref{sec:NEMO3} and \ref{sec:SuperNEMO} present respectively NEMO-3 and SuperNEMO.
+\NI Initiated in the late 1980s, the principal goals of the NEMO project are the search for 0$\nu\beta\beta$ and the measurement of 2$\nu\beta\beta$ decays. The strategy adopted by the collaboration is the direct detection of the two emitted electrons, by separating the $\beta\beta$ emitters from the rest of the detector. This technique also allows to investigate any $\beta\beta$ isotopes with a powerful background discrimination. The Modane Underground Laboratory (LSM), which hosted all the NEMO prototypes and detectors, is described in Section~\ref{sec:LSM}. The NEMO-3 and SuperNEMO detectors are described in Section~\ref{sec:NEMO3} and \ref{BiPoDecayChain}ref{sec:SuperNEMO}.
 
 
 \section{Modane underground laboratory}\label{sec:LSM}
 
 
-\NI Inaugurated in 1982, the Modane Underground Laboratory (LSM : Laboratoire Souterrain de Modane in french) is located in the Frejus tunnel at the border between France and Italy (Figure~\ref{LSMtunnel}).
+\NI Inaugurated in 1982, the Modane Underground Laboratory (LSM) \footnote{LSM : Laboratoire Souterrain de Modane in french} is located in the Frejus tunnel at the border between France and Italy as shown in Figure~\ref{LSMtunnel}.
 
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.35]{pictures/Chap3/LSMtunnel.png}
+\includegraphics[scale=0.3]{pictures/Chap3/LSMtunnel.png}
 \caption{Schematic view of the Modane underground laboratory location in the Frejus tunnel.}
 \label{LSMtunnel}
 \end{center}
@@ -31,19 +31,19 @@
 
 
 
-\NI The laboratory is sheltered from cosmic rays under 1700~meters of rocks (4200 meter water equivalent) which makes it the deepest underground laboratory in Europe and the third one in the world. The cosmic ray flux inside the laboratory have been measured to be 4/m$^\text{2}$/day~\cite{CosmicFluxLSM}, which is a reduction by a factor of one million from that at sea level. The total muon flux for different underground laboratory is presented in~Figure~\ref{LabDeepth}.
+\NI The laboratory is sheltered from cosmic rays under 1700~m of rocks (4200 m.w.e)  \footnote{m.w.e : meter water equivalent} which makes it the deepest underground laboratory in Europe and the third one in the world. The cosmic ray flux inside the laboratory have been measured to be 4~muons/m$^\text{2}$/day~\cite{CosmicFluxLSM}, which is a reduction by a factor of one million from that at sea level. The total muon flux for different underground laboratory is presented in~Figure~\ref{LabDeepth}.
  
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.60]{pictures/Chap3/MuonFluxDifferentLab.pdf}
-\caption{Total muon flux measured for various underground sites as a function of the equivalent vertical depth. The values are  taken from~\cite{MuonFluxUndergroundLab}. }
+\caption{Total muon flux measured for various underground sites as a function of the equivalent vertical depth~\cite{MuonFluxUndergroundLab}. }
 \label{LabDeepth}
 \end{center}
 \end{figure}
 
 
-\NI The protected environment of the laboratory is very favorable to the searches requiring very low backgrounds. Initially, the laboratory hosted an experiment searching for the proton decay. Latest, the laboratory diversified its activities, including astrophysics, biology, geology, electronics and environmental researches. The laboratory also have several High Purity Germanium detectors (HPGe) to measure very low radioactivity. 
+\NI The protected environment of the laboratory is very favorable to the searches of rare processes which require very low backgrounds. Initially, the laboratory hosted an experiment searching for the proton decay. Latest, the laboratory diversified its activities, including astrophysics, biology, geology, electronics and environmental researches. The laboratory also have several High Purity Germanium detectors (HPGe) to measure very low radioactivity. 
 
 
 \bigskip
@@ -58,27 +58,23 @@
 \section{NEMO-3}\label{sec:NEMO3}
 
 
-\NI The NEMO-3 detector ran from February 2003 to January 2011 and searched for $\beta\beta$ decays among seven different isotopes. NEMO-3, shown in Figure~\ref{NEMO3Detector}, was a cylinder of 5~m in diameter and 3~m high. The detector was divided into 20 identical parts referred to as sectors. A picture of one of this sector is presented in Figure~\ref{NEMO3SectorPictures}. For the direct detection of two electrons, thin foils of $\beta\beta$ emitters were verticaly disposed at a fixed radius, as shown in Figure~\ref{TopViewNEMO3}. Placed on each side of the source foils, wire tracking chambers were used to measure the trajectory of charged particles. The tracker was allied to a magnetic field of 25~Gauss for charge identification. A calorimeter surrounded the tracking volume on all sides to provide both energy and timing measurements of particles. Passive shieldings of iron, paraffin, borated water and wood were installed around the detector against cosmic rays and neutron interactions.
+\NI The NEMO-3 detector ran from February 2003 to January 2011 and searched for $\beta\beta$ decays among seven different isotopes. NEMO-3, shown in Figure~\ref{NEMO3Detector}, was shaped as a cylinder of 5~m in diameter and 3~m high. The detector was divided into 20 identical parts referred to as sectors, a picture of one of them is shown in Figure~\ref{NEMO3SectorPictures}. For the direct detection of two electrons, thin foils of $\beta\beta$ emitters were verticaly disposed at a fixed radius, as shown in Figure~\ref{TopViewNEMO3}. Placed on each side of the source foils, wire tracking chambers were used to measure the trajectory of charged particles. The tracker was allied to a magnetic field of 25~Gauss for charge identification. A calorimeter surrounded the tracking volume on all sides providing both energy and timing measurements of particles. Passive shieldings of iron, paraffin, borated water and wood were installed around the detector against cosmic rays and neutron interactions. This section provides an overview of each detector components based on~\cite{NEMO-3-detector}. 
 
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.35]{pictures/Chap2/NEMO-3-Schema.png}
-\caption{Exploded schematic view of the NEMO-3 detector.}
+\caption{Exploded view of the NEMO-3 detector.}
 \label{NEMO3Detector}
 \end{center}
 \end{figure}
-
-
-\NI This section provides an overview of each detector components based on the technical design report of NEMO-3~\cite{NEMO-3-detector}. Their calibrations and performances are also presented.  
-
 
 
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[scale=0.55]{pictures/Chap2/sector.jpg}
-\caption{Picture of a NEMO-3 sector. A source foil is verticaly placed at the center and surrounded by a wire chamber. The tracker is enclosed by a calorimeter.}
+\caption{Picture of a NEMO-3 sector. A source foil is verticaly placed at the center and surrounded by the wire chamber and the calorimeter.}
 \label{NEMO3SectorPictures}
 \end{center}
 \end{figure}
@@ -99,13 +95,13 @@
 \subsection{Source foils}
 
 
-\NI The separation of the source foils from the rest of the detector allows the investigation of any $\beta\beta$ emitters. A total of 8.8~kg of seven enriched isotopes have been introduced in the detector. The isotopes with the largest mass were $^{\text{100}}$Mo with 6.91~kg and $^{\text{82}}$Se with 0.93~kg. These two isotopes provide the best sensitivity to search for 0$\nu\beta\beta$ decays. Smaller quantities of five additionnal isotopes have been included to measure the 2$\nu\beta\beta$ decay rate, including 0.45~kg of $^{\text{130}}$Te, 0.40~kg of $^{\text{116}}$Cd, 36.6~g of $^{\text{150}}$Nd, 9.43~g of $^{\text{96}}$Zr, and 6.99~g of $^{\text{48}}$Ca. The search for 0$\nu\beta\beta$ decay have also been performed with these isotopes. Alongside the enriched foils, 0.6~kg of very pure natural tellurium and 0.6~kg of ultra-pure copper foils were installed to control and validate the background measurements. The distribution of the isotopes around the 20 sectors are shown in Figure~\ref{NEMO3Sector}. The masses, Q$_{\beta\beta}$ values, and natural abundances ($\eta$) for each of these $\beta\beta$ isotopes are given in Table~\ref{tab:isotopeNEMO3}.
+\NI The separation of the source foils from the rest of the detector allows the investigation of any $\beta\beta$ emitters. Seven isotopes for a total of 8.8~kg have been introduced in the detector. $^{\text{100}}$Mo and $^{\text{82}}$Se were the isotope with the largest mass with 6.91~kg and 0.93~kg respectively. These two isotopes provide the best sensitivity to search for 0$\nu\beta\beta$ decays. Smaller quantities have been included to investigate 0$\nu\beta\beta$ and measure the 2$\nu\beta\beta$ decay rate, including 0.45~kg of $^{\text{130}}$Te, 0.40~kg of $^{\text{116}}$Cd, 36.6~g of $^{\text{150}}$Nd, 9.43~g of $^{\text{96}}$Zr, and 6.99~g of $^{\text{48}}$Ca. Alongside the enriched foils, 0.6~kg of very pure natural tellurium and 0.6~kg of ultra-pure copper foils were installed to control and validate the background measurements. The distribution of the isotopes around the 20 sectors are shown in Figure~\ref{NEMO3Sector}. The masses, Q$_{\beta\beta}$ values, and natural abundances ($\eta$) for each of these $\beta\beta$ isotopes are given in Table~\ref{tab:isotopeNEMO3}.
 
 
 
 \begin{figure}[h!]
 \begin{center}
-\includegraphics[scale=0.45]{pictures/Chap3/BBSourceDistribution.png}
+\includegraphics[scale=0.5]{pictures/Chap3/BBSourceDistribution.png}
 \caption{Schematic view of the seven different $\beta\beta$ sources location inside the NEMO-3 detector. The main isotopes was $^{\text{100}}$Mo (6.9~kg) and $^{\text{82}}$Se (0.9~kg).}
 \label{NEMO3Sector}
 \end{center}
@@ -113,13 +109,13 @@
 
 
 
-\NI Each sector supports a source frame where seven strips of $\beta\beta$ emitter were placed. The five central strips were 2.48~m long and 6.5~cm wide, while the two border strips measured 2.48~m long and 6.3~cm wide. The surface density of the strips are in the range 30~-~60~mg/cm$^\text{2}$, which is a compromise to maximise the isotope mass while mainting the foil thin enough to reduce the scatterings through the foil bulk, and do not degrade the energy resolution.
+\NI Each sector supports a source frame with seven strips of $\beta\beta$ emitter 248~cm~long. The five central strips were  6.5~cm wide, while the two strips on the edge were 6.3~cm wide. The surface density of the strips are in the range 30~-~60~mg/cm$^\text{2}$, which is a compromise to maximise the isotope mass while mainting the foil thin enough to reduce the electron multiple scatterings through the foil bulk, and do not degrade the energy resolution.
 
 
 \bigskip
 
 
-\NI Two different sorts of sources were in NEMO-3, metallic and composite sources. The metallic sources are metallic foils having a density of approximately 10~g/cm$^\text{3}$, corresponding to a thickness a 60~$\mu$m. The cadmium-116, a part of molybdenum-100 and the copper foils were metallic. Note that the $^{\text{116}}$Cd foils were wrapped into a plastic film to avoid their creep. The composite foils are a mixture of source powder and organic glue. The density of the composite foil were approximately five times lower than the metallic foils, allowing to thickness up to 300~$\mu$s. The composite foils were surrounded by two mylar films to provide a mechanical strengh. To ensure a good bond with the glue and facilitate evaporation, the mylar sheets have a large number of microscopic holes. The selenium-82, tellurium-130, zirconium-96, neodynium-150 and calcium-48 foils were composite.
+\NI Two different sorts of sources were in NEMO-3, metallic and composite sources. The metallic sources are metallic foils having a density of approximately 10~g/cm$^\text{3}$, corresponding to a thickness a 60~$\mu$m. The $^{\text{116}}$Cd, a part of $^{\text{1OO}}$Mo and the copper foils were metallic. Note that the $^{\text{116}}$Cd foils were wrapped into a plastic film to avoid their creep. The composite foils are a mixture of source powder and organic glue. The density of the composite foil were approximately five times lower than the metallic foils, allowing thickness up to 300~$\mu$s. The composite foils were surrounded by two mylar films to provide mechanical strengh. To ensure a good bond with the glue and facilitate evaporation, the mylar sheets have a large number of microscopic holes. The $^{\text{82}}$Se, $^{\text{130}}$Te, $^{\text{96}}$Zr, $^{\text{150}}$Nd and $^{\text{48}}$Ca and a part of $^{\text{100}}$Mo foils were composite.
 
 
 
@@ -170,7 +166,7 @@ $^{\text{48}}$Ca  & 6.99  $\pm$ 0.05  & 4267.98 $\pm$ 0.32 & 0.19 \\[0.1cm]
 \bigskip
 
 
-\NI The cadmium has been divided in seven~strips of about 2423~cm long and about 65~cm wide. Each strip was made of one or more smaller pieces which were glued together with Araldite~AW~106 and a hardener~HV953V. Two 12-$\mu$m mylar films surrounded the entire strip to provide a mechanical strenght. The mylar films were glued using Araldite~2020/A~XW~3961 and Araldite~2020/B~XW~3972.
+\NI The cadmium has been divided in seven~strips of 2423~cm long and $\sim$~65~cm wide. Each strip was made of one or more smaller pieces which were glued together with Araldite~AW~106 and a hardener~HV953V. Two 12-$\mu$m mylar films surrounded the entire strip to provide a mechanical strenght. The mylar films were glued using Araldite~2020/A~XW~3961 and Araldite~2020/B~XW~3972.
 
 
 \begin{table}[h!]
@@ -264,13 +260,13 @@ wiring of four elementary Geiger cells.}
 \end{figure}
 
 
-\NI An elementary cell (Figure~\ref{GeigerCellNEMO3}) is 2.7~m long and 3~cm in diameter, consisting of a central anode wire surrounded by eight ground wires. Four of these cathode wires are shared between the neighbouring cells, as shown in Figure~\ref{TrackerNEMOView}. This has the advantages from a radiopurity point of view and also minimizes the scattering inside the tracker. An extra ground wire have been added between the layers to avoid electrostatic cross talk. The wires are made of stainless steel, 2.7~m long and 50~$\mu$m in diameter. Copper cathod rings located at the top and bottom of the anode wires collect signals. These rings are 3~cm long a 2.3~cm in diameter.
+\NI An elementary cell, shown in Figure~\ref{GeigerCellNEMO3}, is 2.7~m long and 3~cm in diameter, consisting of a central anode wire surrounded by eight ground wires. Four of these cathode wires are shared between the neighbouring cells, as shown in Figure~\ref{TrackerNEMOView}. This has the advantage from a radiopurity point of view because it reduces the amount of material in the tracker volume. It also minimizes the scattering inside the tracker. An extra ground wire have been added between the layers to avoid electrostatic cross talk. The wires are made of stainless steel, 2.7~m long and 50~$\mu$m in diameter. Copper cathod rings located at the top and bottom of the anode wires collect signals. These rings are 3~cm long and 2.3~cm in diameter.
 
 
 \bigskip
 
 
-\NI The gas inside the tracker volume is a mixture of 95~\% of helium, 4~\% of ethanol, 1~\% of argon and 0.1~\% of water held at 10~mbar above atmospheric pressure. Helium is used as basis of the tracking gas, since it is a noble gas with a low atomic number, which minimises multiple scatterings. When traversing the tracker, an electron from $\beta\beta$ decay only lost approximately 30~keV. To quench the photoionisation process, by absorbing UV photons, small quantity of ethanol is mixted with helium. The performance of the tracker is then improved by reducing the re-firing effect of one cell to another. Some argon is also introduced to the mixture to stabilize the plasma propagation. Finally, in the final year of the detector, very small amount of water vapour have been added in order to rejuvenate the ageing cells.
+\NI The gas inside the tracker volume is a mixture of 95~\% of helium, 4~\% of ethanol, 1~\% of argon and 0.1~\% of water held at 10~mbar above atmospheric pressure. Helium is used as basis of the tracking gas, since it is a noble gas with a low atomic number, which minimises multiple scatterings. When traversing the tracker, an electron from $\beta\beta$ decay only lost approximately 30~keV. Small quantity of ethanol are used to quench the photoionisation process, by absorbing UV photons. The performance of the tracker is then improved by reducing the re-firing effect of one cell to another. Some argon is also introduced to the mixture to stabilize the plasma propagation. Finally, in the final year of the detector, very small amount of water vapour have been added in order to rejuvenate the ageing cells.
 
 
 
@@ -283,13 +279,13 @@ wiring of four elementary Geiger cells.}
 \end{figure}
 
 
-\NI When a charged particle crosses the tracking volume, the gas is ionised, producing He$^{+}$ ions and electrons. By applying a potential difference of about 1600~V between anode and cathode wires, these electrons drift towards the central anode and are accelerated, ionising more atoms. This creates an avalanche that arrives at the anode wire and produces a signal. In this operating mode, a crossing charged particle creates $\sim$~6~electrons/cm. The drift speed is $\sim$~2.3 cm/$\mu$s, close to the anode, and $\sim$~1~cm/$\mu$s near the ground wires. The radial position of a particle can be reconstructed using the drift time drift and the globlal trigger (see Section~\ref{sec:triggerAndDAQ}). During the electron avalanche, UV photons are induced which create a plasma. This plasma propagates along the length of the wire in both side at the speed of 6 to 7 cm/$\mu$s. The detection of this plasma by the cathode rings give information on the longitudinal position of a crossing particle. For 1~MeV electron, the average hit resolution of a cell have been measured to 0.5~mm on the transversal plane and 8.0~mm on the longitudinal axis.
+\NI When a charged particle crosses the tracking volume, the gas is ionised, producing He$^{+}$ ions and electrons. By applying a potential difference of about 1600~V between anode and cathode wires, these electrons drift towards the central anode and are accelerated, ionising more atoms. This creates an avalanche that arrives at the anode wire and produces a signal. In this operating mode, a crossing charged particle creates $\sim$~6~electrons/cm. The drift speed is $\sim$~2.3 cm/$\mu$s, close to the anode, and $\sim$~1~cm/$\mu$s near the ground wires. The radial position of a particle can be reconstructed using the drift time and the globlal trigger (see Section~\ref{sec:triggerAndDAQ}). During the electron avalanche, induced UV photons create a plasma that propagates along the length of the wire at a speed of $\sim$~6 to 7 cm/$\mu$s. The detection of this plasma by the cathode rings on both side give information on the longitudinal position of a crossing particle. For 1~MeV electron, the average hit resolution of a cell have been measured to 0.5~mm on the transversal plane and 8.0~mm on the longitudinal axis.
 
 
 \subsection{Calorimeter}
 
 
-\NI The roles of the NEMO-3 calorimeter are to measure the energy of the incindent particles, provide timing informations of particles in an event, and give a fast trigger signal. The calorimeter surrounds the tracking chambers on all sides. It consists of 1940 separated optical modules. Each optical module is made of a scintillator block, two light guides and a PMT. A schematic view of a NEMO-3 optical module is presented in Figure~\ref{CaloModuleNEMO3}.	
+\NI The role of the NEMO-3 calorimeter is to measure the energy of the incindent particles, to provide timing informations of particles in an event, and to provide a fast trigger signal. The calorimeter surrounds the tracking chambers on all sides. It consists of 1940 separated optical modules. Each optical module is made of a scintillator block, two light guides and a PMT. A schematic view of a NEMO-3 optical module is presented in Figure~\ref{CaloModuleNEMO3}.	
 
 
 \bigskip
@@ -303,7 +299,7 @@ wiring of four elementary Geiger cells.}
 \end{figure}
 
 
-\NI The scintillator blocks are made of a polystyrene, (C$_\text{6}$H$_\text{5}$CH=CH$_\text{2}$), doped with a scintillating agent, p-Terphenyl (PTP), and a wavelength shifter 1.4-di-(5-phenyl-2-oxazoly) benzene (POPOP). By entering a block, electrons or positrons lose their energy through ionization and excite molecules with an energy proportional to the deposited energy. During its de-excitation, PTP translates energy into scintillation light. This light is then shifted by POPOP into a wavelength corresponding to the PMT acceptance. The scintillation light is carried to the PMT via 60~mm thick light guides made of polymethyl methacrylate (PMMA). The light transmission through the guides is approximately 98~\%. These light guide also provide a protection for the PMT against the helium of the tracker gas, which would damage the PMTs. The four lateral sides of the scintillator block are wrapped with 350~mm of polytetrafluoroethylene (PTFE) in order to diffuse scintillation light and increase overall collection. A 12~$\mu$m layer of aluminised Mylar covers the blocks to increase light collection and protect the scintillator from UV photons produced inside the tracker.
+\NI The scintillator blocks are made of a polystyrene, (C$_\text{6}$H$_\text{5}$CH=CH$_\text{2}$), doped with a scintillating agent, p-Terphenyl (PTP), and a wavelength shifter 1.4-di-(5-phenyl-2-oxazoly) benzene (POPOP). By entering a block, charged particles lose their energy through ionization and excite molecules with an energy proportional to the deposited energy. During its de-excitation, PTP translates energy into scintillation light. This light is then shifted by POPOP into a wavelength corresponding to the PMT acceptance. The scintillation light is carried to the PMT via 60~mm thick light guides made of polymethyl methacrylate (PMMA). The light transmission through the guides is approximately 98~\%. These light guide also provide a protection for the PMT against the helium of the tracker gas, which would damage the PMTs. The four lateral sides of the scintillator block are wrapped with 350~mm of polytetrafluoroethylene (PTFE) in order to diffuse scintillation light and increase overall collection. A 12~$\mu$m layer of aluminised Mylar covers the blocks to increase light collection and protect the scintillator from UV photons produced inside the tracker.
 
 
 \bigskip
@@ -327,13 +323,13 @@ wiring of four elementary Geiger cells.}
 \end{figure}
 
 
-\NI The composition and the size of the scintillator blocks are not same, depending on their position in the detector. The IN, EE and EC blocks are made of 98.49~\% of polystyrene, 1.5~\% of PTP, and 0.01~\% of POPOP. The IN blocks are the smallest with a front face size of 153~$\times$~154 mm. The EE and EC are the largest with a front face sizes of 200~$\times$~218~mm. All the petals blocks are made of 98.75 \% of polystyrene, 1.2~\% of PTP, and 0.05~\% of POPOP. The L1 blocks have a similar size to the IN blocks. The other petal sizes increase to L4 blocks, which have the same size than the outer blocks. 
+\NI The composition and the size of the scintillator blocks are not same, depending on their position in the detector. The IN, EE and EC blocks are made of 98.49~\% of polystyrene, 1.5~\% of PTP, and 0.01~\% of POPOP. The IN blocks are the smallest with a front face size of 153~$\times$~154 mm. The EE and EC are the largest with a front face sizes of 200~$\times$~218~mm. All the petals blocks are made of 98.75 \% of polystyrene, 1.2~\% of PTP, and 0.05~\% of POPOP. The L1 blocks have a similar size to the IN blocks and L4 have similar size to the EE blocks. 
 
 
 \bigskip
 
 
-\NI The Hamamatsu company was chosen to produce the 3'' and 5'' PMTs. The 3'' PMTs (R6091) possess twelve dynodes and a flat photocathode, while the 5'' (R6594) have ten dynodes and hemispherical photocathode. The radiopurity of the PMT glass has been measured by HPGe detector. The contamination in $^{\text{40}}$K, $^{\text{214}}$Bi and $^{\text{208}}$Tl have been found to be 0.34, 0.083 and 5$\times$10$^{\text{-3}}$ Bq/PMT, respectively, for the 3'' PMTs, and 0.53, 0.24 and 0.014 Bq/PMT for the 5'' PMTs.
+\NI The Hamamatsu company was chosen to produce the 3'' and 5'' PMTs. The 3'' PMTs (R6091) possess twelve dynodes and a flat photocathode, while the 5'' (R6594) have ten dynodes and hemispherical photocathode. The radiopurity of the PMT glass has been measured by HPGe detector. The contamination in $^{\text{40}}$K, $^{\text{214}}$Bi and $^{\text{208}}$Tl have been found to be 0.34~Bq/PMT, 0.083~Bq/PMT and 5$\times$10$^{\text{-3}}$~Bq/PMT, respectively, for the 3'' PMTs, and 0.53~Bq/PMT, 0.24~Bq/PMT and 0.014 Bq/PMT for the 5'' PMTs.
 
 
 \FloatBarrier
@@ -410,7 +406,7 @@ wiring of four elementary Geiger cells.}
 \bigskip
 
 
-\NI To determine the timing resolution, for 1~MeV electrons, the difference in arrival time between the two electrons from $^{\text{207}}$Bi is used. It has be found to be $\sigma_{\text{t}}$ = 250~ps.
+\NI To determine the timing resolution, for 1~MeV electrons, the difference in arrival time between the two electrons from $^{\text{207}}$Bi is used. It has be found to be $\sigma_{\text{t}}$ = 250~ps~\cite{NEMO-3-detector}.
 
  
 \subsubsection{Laser survey}
@@ -422,7 +418,7 @@ wiring of four elementary Geiger cells.}
 \bigskip
 
 
-\NI After each absolute calibration run, a laser survey is immediated conducted, and constitute a reference position for the laser light peak (C$^{\text{t}_\text{0}}_{\text{laser}}$) in the reference PMTs and NEMO-3 PMTs. A second reference point is determined for the reference PMT, by comparing C$^{\text{t}_\text{0}}_{\text{laser}}$ to the 976~keV electron from the $^{\text{207}}$Bi source (C$^{\text{t}_\text{0}}_{\text{Bi}}$). The shift of the laser peak over the time (C$^{\text{t}}_{\text{laser}}$) is monitored for all PMTs. Any changes in C$^{\text{t}}_{\text{laser}}$ reflects both a change in the NEMO-3 PMT performances and changes in the laser light itself. By comparing C$^{\text{t}}_{\text{laser}}$ to C$^{\text{t}_\text{0}}_{\text{Bi}}$, the consequences from a change in the laser light are calibrated out, leaving only the gain variation in the PMTs to account for.
+\NI After each absolute calibration run, a laser survey is immediated conducted, and constitute a reference position for the laser light peak (C$^{\text{t}_\text{0}}_{\text{laser}}$) in the reference PMTs and calorimeter PMTs. A second reference point is determined for the reference PMT, by comparing C$^{\text{t}_\text{0}}_{\text{laser}}$ to the 976~keV electron from the $^{\text{207}}$Bi source (C$^{\text{t}_\text{0}}_{\text{Bi}}$). The shift of the laser peak over the time (C$^{\text{t}}_{\text{laser}}$) is monitored for all PMTs. Any changes in C$^{\text{t}}_{\text{laser}}$ reflects both a change in the NEMO-3 PMT performances and changes in the laser light itself. By comparing C$^{\text{t}}_{\text{laser}}$ to C$^{\text{t}_\text{0}}_{\text{Bi}}$, the consequences from a change in the laser light are calibrated out, leaving only the gain variation in the PMTs to account for.
 
 
 \bigskip
@@ -433,7 +429,7 @@ wiring of four elementary Geiger cells.}
 \subsection{Magnetic coil and shielding}
 
 
-\NI Despite NEMO-3 was located at LSM under 4800~m water-equivalent, which highly reduces the cosmic muon flux, the detector must be protected by different shieldings. Neutrons produced from ($\alpha$, n) reactions, cosmic muon spallation or spontaneous fission of uranium undergo neutron capture and produce high energy $\gamma$-rays. As seen in Section~ , these $\gamma$-rays are able to reproduce the $\beta\beta$ decay signal. Layers of passive shielding were installed around the detector to protect against the external neutron and $\gamma$-ray flux. A magnetic field allows positron/electron discrimation helps the identification of remaining external decay products.
+\NI Despite NEMO-3 was located at LSM under 4800~m.w.e, which highly reduces the cosmic muon flux, the detector must be protected from different background sources. Neutrons produced from ($\alpha$, n) reactions, cosmic muon spallation or spontaneous fission of uranium undergo neutron capture and produce high energy $\gamma$-rays. As seen in Section~ , these $\gamma$-rays are able to reproduce the $\beta\beta$ decay signal. Layers of passive shielding were installed around the detector to protect against the external neutron and $\gamma$-ray flux. A magnetic field allows positron/electron discrimation helps the identification of remaining external decay products.
 
 
 \subsubsection{The magnetic coil}
@@ -445,7 +441,7 @@ wiring of four elementary Geiger cells.}
 \bigskip
 
 
-\NI The magnetic field allows discrimination between $\beta\beta$ decay events and electron-positron (e$^+$e$^-$) pair from interactions of high energy $\gamma$-rays in the source foil. The rejection of the e$^+$e$^-$ pair is $\sim$~95~\% efficient at 1~MeV. 
+\NI The magnetic field allows discrimination between $\beta\beta$ decay events and electron-positron (e$^+$e$^-$) pair from interactions of high energy $\gamma$-rays in the source foil. The rejection of the e$^+$e$^-$ pair is $\sim$~95~\% efficient at 1~MeV~\cite{NEMO-3-detector}. 
 
 \bigskip
 
@@ -510,20 +506,33 @@ wiring of four elementary Geiger cells.}
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{c|c|c|c}
-Isotopes & T$_{\text{1/2}}^{\text{2}\nu}$ [y] at 90 \% C.L. & T$_{\text{1/2}}^{\text{0}\nu}$ [y] at 90 \% C.L. & m$_{\beta\beta}$ [eV] \\
+\begin{turn}{90}
+\begin{tabular}{c|c|c|c|c|c}
+
+Isotopes & Exposure [y] & T$_{\text{1/2}}^{\text{2}\nu}$ [y] at 90 \% C.L. & T$_{\text{1/2}}^{\text{0}\nu}$ [y] at 90 \% C.L. & m$_{\beta\beta}$ [eV] & ref\\
+
 \toprule
-$^{\text{100}}$Mo \cite{NEMO3:Mo100} & [7.1 $\pm$ 0.5] $\times$ 10$^{\text{18}}$ & > 1.1 $\times$ 10$^{\text{24}}$ & < [0.33 - 0.62]  \\[0.1cm]
-$^{\text{82}}$Se \cite{NEMO3:Se82} & [10.07 $\pm$ 0.14 $\pm$ 0.54] $\times$ 10$^{\text{19}}$ & > 2.5 $\times$ 10$^{\text{23}}$  & < [1.2 - 3.0]  \\[0.1cm]
-$^{\text{130}}$Te \cite{NEMO3:Te130}& [7.0 $\pm$ 0.9 $\pm$ 1.1] $\times$ 10$^{\text{20}}$ & > 1.3 $\times$ 10$^{\text{23}}$  & - \\[0.1cm]
-$^{\text{116}}$Cd \cite{Arnold2016bed}& [2.74 $\pm$ 0.04 $\pm$ 0.18] $\times$ 10$^{\text{19}}$ & > 1.0 $\times$ 10$^{\text{23}}$  & < [1.4 - 2.5]  \\[0.1cm]
-$^{\text{150}}$Nd \cite{NEMO3:Nd150}& [9.34 $\pm$ 0.22 $\pm$ $^{+\text{0.62}}_{-\text{0.60}}$] $\times$ 10$^{\text{18}}$ & > 2.0 $\times$ 10$^{\text{22}}$  & [1.6 - 5.3] \\[0.1cm]
-$^{\text{96}}$Zr  \cite{NEMO3:Zr96}& [2.35 $\pm$ 0.14 $\pm$ 0.16] $\times$ 10$^{\text{19}}$ & > 9.2 $\times$ 10$^{\text{21}}$  & - \\[0.1cm]
-$^{\text{48}}$Ca \cite{NEMO3:Ca48} & [6.4 $\times$ $^{+\text{0.7}}_{-\text{0.6}}$ $^{+\text{1.2}}_{-\text{0.9}}$] $\times$ 10$^{\text{19}}$ & > 2.0 $\times$ 10$^{\text{22}}$  & < [6.0 - 26] \\[0.1cm]
+
+$^{\text{100}}$Mo  & 4.96 & [7.1 $\pm$ 0.5] $\times$ 10$^{\text{18}}$ & > 1.1 $\times$ 10$^{\text{24}}$ & < [0.33 - 0.62] & \cite{NEMO3:Mo100} \\[0.1cm]
+
+$^{\text{82}}$Se  & 5.25 & [10.07 $\pm$ 0.14 $\pm$ 0.54] $\times$ 10$^{\text{19}}$ & > 2.5 $\times$ 10$^{\text{23}}$  & < [1.2 - 3.0] &\cite{NEMO3:Se82}  \\[0.1cm]
+
+$^{\text{130}}$Te & 3.49 &[7.0 $\pm$ 0.9 $\pm$ 1.1] $\times$ 10$^{\text{20}}$ & > 1.3 $\times$ 10$^{\text{23}}$  & - & \cite{NEMO3:Te130}\\[0.1cm]
+
+$^{\text{116}}$Cd & 5.26 &[2.74 $\pm$ 0.04 $\pm$ 0.18] $\times$ 10$^{\text{19}}$ & > 1.0 $\times$ 10$^{\text{23}}$  & < [1.4 - 2.5] &\cite{Arnold2016bed} \\[0.1cm]
+
+$^{\text{150}}$Nd & 5.25 &[9.34 $\pm$ 0.22 $\pm$ $^{+\text{0.62}}_{-\text{0.60}}$] $\times$ 10$^{\text{18}}$ & > 2.0 $\times$ 10$^{\text{22}}$  & [1.6 - 5.3] & \cite{NEMO3:Nd150}\\[0.1cm]
+
+$^{\text{96}}$Zr  & 3.35 & [2.35 $\pm$ 0.14 $\pm$ 0.16] $\times$ 10$^{\text{19}}$ & > 9.2 $\times$ 10$^{\text{21}}$  & - & \cite{NEMO3:Zr96}\\[0.1cm]
+
+$^{\text{48}}$Ca  & 5.25 &[6.4 $\times$ $^{+\text{0.7}}_{-\text{0.6}}$ $^{+\text{1.2}}_{-\text{0.9}}$] $\times$ 10$^{\text{19}}$ & > 2.0 $\times$ 10$^{\text{22}}$  & < [6.0 - 26] & \cite{NEMO3:Ca48}\\[0.1cm]
+
 \bottomrule
 \end{tabular}
-\caption{Summary of the different half-lives measured for isotopes introduced in NEMO-3.}
+\end{turn}
+\caption{Summary of the different half-lives measured for isotopes introduced in NEMO-3.}[angle=90]
 \label{tab:SummaryDecayRateNEMO3}
+
 \end{table}
 
 
